--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -2,12 +2,12 @@
 ---
 
 @use 'main
-{%- if jekyll.environment == ' production ' -%}
+{%- if jekyll.environment == 'production' -%}
   .bundle
 {%- endif -%}
 ';
 
-/* append your custom style below */
+/*** append your custom style below ***/
 
 // keep normal aspect-ratio & fit to width
 *.preview-img {
